Clean up and fix for window height on contact page in dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -124,7 +124,7 @@ ul {
 }
 
 #Contact-Page--Container {
-  height: 100vh;
+  height: 110vh;
 
   a:hover {
     text-decoration: none;
